--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.2.0",
     "vue": "^3.4.31",
-    "vuex": "^4.0.2"
+    "vue-router": "^4.4.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
